<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_title"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/repositoryNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repository_name_default"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_description_header"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/repositoryDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/repository_description_default"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/last_commit_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/lastCommitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/last_commit_default"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/default_branch_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/defaultBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/default_branch_default"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/forks_number_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/forksCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/forks_number_default"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/stars_header"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/starsCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/stars_number_default"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_header"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/defaultLanguageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/programming_language_default"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>